<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_up_level" android:title="@string/action_up_level"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_new_file" android:title="@string/action_new_file"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_new_folder" android:title="@string/action_new_folder"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_sort" android:title="@string/action_sort"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_play" android:title="@string/action_play"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_play_sorted" android:title="@string/action_play_sorted"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_filter" android:title="@string/action_filter"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_reports" android:title="@string/action_reports"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
